// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App__Footer with default 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 24px 0;
  margin-top: 36px;
  border-top: 1px solid #eee;
  color: #767676;
  font-size: 12px;
}

.emotion-2 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-2 > ul > li {
  display: inline-block;
}

.emotion-2 > ul > li + li {
  margin-left: 10px;
}

.emotion-4 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  border-color: #4078c0;
}

<div
  className="emotion-4 emotion-5"
>
  <div
    className="emotion-2 emotion-3"
  >
    <ul>
      <li>
        © 2016 keik
      </li>
      <li>
        <a
          href="#"
        >
          Help
        </a>
      </li>
    </ul>
    <a
      className="emotion-0 emotion-1"
      href="#"
    >
      GH
    </a>
    <ul>
      <li>
        <a
          href="#"
        >
          API
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          About
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Header with default 1`] = `
.emotion-0 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  border-color: #4078c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  background-color: #24292e;
  border-bottom: 1px solid #e5e5e5;
  font-size: 13px;
}

.emotion-9 > *:last-child {
  margin-left: auto;
}

.emotion-9:after {
  content: '';
  display: table;
  clear: both;
}

.emotion-2 {
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 3px;
}

.emotion-2 label {
  border-right: 1px solid #ddd;
  padding: 4px 8px;
  color: #767676;
  font-size: 12px;
}

.emotion-2 input {
  border: none;
  min-height: 26px;
}

.emotion-7 > * + * {
  margin-left: 12px;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-9"
>
  <div>
    <a
      className="emotion-0 emotion-1"
      href="/"
    >
      GH
    </a>
  </div>
  <form
    className="emotion-2"
  >
    <label
      htmlFor="input-search-query"
    >
      <input
        placeholder="Search or jump to..."
      />
    </label>
  </form>
  <div
    className="emotion-7 emotion-8"
  >
    <a
      className="emotion-3 emotion-4"
      href="/login"
    >
      Sign in
    </a>
    <a
      className="emotion-5 emotion-4"
      href="/join"
    >
      Sign up
    </a>
  </div>
</div>
`;

exports[`Storyshots Home with default 1`] = `
.emotion-5 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-0 li {
  padding: 12px 0;
}

.emotion-0 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-1 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 0;
  background-color: #fff;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-2 li {
  padding: 12px 12px;
}

.emotion-2 li + li {
  border-top: 1px solid #f1f1f1;
}

<div
  className="emotion-5 emotion-6"
>
  <div
    style={
      Object {
        "display": "flex",
        "marginTop": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <ul
        className="emotion-0"
      >
        <li>
          ACTIVITY_1
        </li>
        <li>
          ACTIVITY_2
        </li>
        <li>
          ACTIVITY_3
        </li>
      </ul>
    </div>
    <div
      style={
        Object {
          "marginLeft": "24px",
          "width": "320px",
        }
      }
    >
      <div
        className="emotion-4"
      >
        <div
          className="emotion-1"
        >
          Public Repositories
        </div>
        <div
          className="emotion-3"
        >
          <ul
            className="emotion-2"
          >
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME1"
              >
                FULL_NAME1
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME2"
              >
                FULL_NAME2
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME3"
              >
                FULL_NAME3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots New with default 1`] = `
.emotion-18 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  font-size: 14px;
  color: #767676;
}

.emotion-2 {
  margin-bottom: 8px;
  display: block;
}

.emotion-2 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-4 {
  margin-bottom: 8px;
  display: inline-block;
}

.emotion-4 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-16 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  padding: 6px 12px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-18 emotion-19"
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #e5e5e5",
        "marginBottom": "32px",
        "marginTop": "24px",
        "paddingBottom": "8px",
      }
    }
  >
    <h2
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      Create a new repository
    </h2>
    <p
      className="emotion-0 emotion-1"
    >
      A repository contains all the files for your project, including the revision history.
    </p>
  </div>
  <form
    action="/api/v1/user/repos"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value="TRUE"
    />
    <div>
      <div
        className="emotion-2 emotion-3"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <label
          htmlFor="owner"
        >
          Owner
        </label>
        <input
          id="owner"
          name="owner"
          type="text"
        />
      </div>
      <span>
         / 
      </span>
      <div
        className="emotion-4 emotion-3"
      >
        <label
          htmlFor="name"
        >
          Repository name
        </label>
        <input
          id="name"
          name="name"
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label
        htmlFor="description"
      >
        Description (optional)
      </label>
      <input
        id="description"
        name="description"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
      />
    </div>
    <hr />
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="true"
        />
        Public
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        Anyone can see this repository. You choose who can commit.
      </p>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="false"
        />
        Private
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        You choose who can see and commit to this repository.
      </p>
    </div>
    <hr />
    <button
      className="emotion-16 emotion-17"
    >
      Create repository
    </button>
  </form>
</div>
`;

exports[`Storyshots Repository/Branches with default 1`] = `
.emotion-1 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1 li {
  padding: 12px 0;
}

.emotion-1 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-3 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-0 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-2 {
  padding: 12px;
  background-color: #fff;
}

.emotion-2 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-2 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-2 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Default branch
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/"
          >
            
          </a>
            Updated
           
          <time-ago
            datetime=""
          />
           by 
          <a
            href="/"
          >
            
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Active branches
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/$BRANCH"
          >
            $BRANCH
          </a>
            Updated 
          <time-ago
            datetime="$DATE"
          />
           
          by 
          <a
            href="/$AUTHOR"
          >
            $AUTHOR
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commit with default 1`] = `
.emotion-5 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 12px;
  background-color: #fff;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-0 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 a,
.emotion-9 button {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 >:first-child a,
.emotion-9 >:first-child button {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > a:first-child,
.emotion-9 > button:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 >:last-child a,
.emotion-9 >:last-child button {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-9 > a:last-child,
.emotion-9 > button:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <h1
          style={
            Object {
              "color": "#213f4d",
              "fontSize": "18px",
              "fontWeight": "bold",
              "margin": "0",
            }
          }
        >
          $MESSAGE
        </h1>
        <a
          className="emotion-0 emotion-1"
          href="/$OWNER/$REPO/tree/$SHA"
          style={
            Object {
              "float": "right",
            }
          }
        >
          Browse files
        </a>
      </div>
      <div
        style={
          Object {
            "color": "#818c90",
            "fontSize": "12px",
            "margin": "0",
            "minHeight": "18px",
          }
        }
      >
        <i
          className="fa fa-code-fork"
        />
         master
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="$NAME"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          $NAME
           commited on
           
          <time-ago
            datetime="$DATE"
          />
        </div>
        <div
          style={
            Object {
              "color": "#767676",
              "fontFamily": "Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "fontSize": "12px",
              "lineHeight": "24px",
            }
          }
        >
          <span
            style={
              Object {
                "marginRight": "12px",
              }
            }
          >
            0
             parent
          </span>
          <span>
            commit 
            $SHA
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <i
        className="fa fa-file-text-o"
      />
       Showing N changed file with N addition and N deletion.
    </div>
    <div>
      <div
        className="emotion-9 emotion-10"
      >
        <button
          className="emotion-5 emotion-1"
        >
          Unified
        </button>
        <button
          className="emotion-5 emotion-1"
        >
          Split
        </button>
      </div>
    </div>
  </div>
  <div
    id="patches"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-11"
      >
        $FILENAME
      </div>
      <div
        className="emotion-3"
      >
        <pre
          className="emotion-16 emotion-17"
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <ul
            className="emotion-12 emotion-13"
          >
            <li>
              ...
            </li>
            <li>
              1
            </li>
            <li>
              2
            </li>
            <li>
              3
            </li>
            <li>
              4
            </li>
            <li>
              5
            </li>
            <li>
              6
            </li>
            <li>
              7
            </li>
            <li>
              8
            </li>
            <li>
              9
            </li>
            <li>
              10
            </li>
            <li>
              11
            </li>
          </ul>
          <code
            className="hljs emotion-14 emotion-15"
            dangerouslySetInnerHTML={
              Object {
                "__html": "$PATCH",
              }
            }
          />
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commits with default 1`] = `
.emotion-2 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a,
.emotion-6 button {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-6 >:first-child a,
.emotion-6 >:first-child button {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 > a:first-child,
.emotion-6 > button:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 >:last-child a,
.emotion-6 >:last-child button {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-6 > a:last-child,
.emotion-6 > button:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

<ul
  className="emotion-28 emotion-29"
>
  <li
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_1
        </div>
        <div
          className="meta"
        >
          <a
            href="/$NAME_1}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_1
           commited on
           
          <time-ago
            datetime="$DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-6 emotion-7"
      >
        <button
          className="emotion-2 emotion-3"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-2 emotion-3"
          href="/$OWNER/$REPO/commit/$SHA_1"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_1
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-2 emotion-3"
        href="/$OWNER/$REPO/tree/$SHA_1"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
  <li
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_2
        </div>
        <div
          className="meta"
        >
          <a
            href="/$NAME_2}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_2
           commited on
           
          <time-ago
            datetime="$DATE_2"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-6 emotion-7"
      >
        <button
          className="emotion-2 emotion-3"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-2 emotion-3"
          href="/$OWNER/$REPO/commit/$SHA_2"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_2
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-2 emotion-3"
        href="/$OWNER/$REPO/tree/$SHA_2"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Repository/FileContent with default 1`] = `
.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-1 {
  padding: 12px;
  background-color: #fff;
}

.emotion-1 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-1 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-1 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-0 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-9 a,
.emotion-9 button {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 >:first-child a,
.emotion-9 >:first-child button {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > a:first-child,
.emotion-9 > button:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 >:last-child a,
.emotion-9 >:last-child button {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-9 > a:last-child,
.emotion-9 > button:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      commit tease
    </div>
    <div
      className="emotion-1"
    >
      <button>
        2
         contributors
      </button>
      <a
        href="/$CONTRIBUTOR_1"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_1"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
      <a
        href="/$CONTRIBUTOR_2"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_2"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
    </div>
  </div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-11"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          1
           line | 
          10
           bytes
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-9 emotion-10"
          >
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/{params.owner}/$REPO/raw/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Raw
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/blame/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Blame
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/commits/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              History
            </a>
          </div>
          <button
            style={
              Object {
                "margin": "0 6px",
              }
            }
          >
            <i
              className="fa fa-pencil"
            />
          </button>
          <button>
            <i
              className="fa fa-trash"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <pre
        className="emotion-16 emotion-17"
      >
        <ul
          className="emotion-12 emotion-13"
        >
          <li>
            1
          </li>
        </ul>
        <code
          className="hljs emotion-14 emotion-15"
          dangerouslySetInnerHTML={
            Object {
              "__html": "$CONTENT",
            }
          }
          id="content"
        />
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Graphs with default 1`] = `
<div>
  <h2>
    graphs
  </h2>
</div>
`;

exports[`Storyshots Repository/Issues with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a,
.emotion-6 button {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-6 >:first-child a,
.emotion-6 >:first-child button {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 > a:first-child,
.emotion-6 > button:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-6 >:last-child a,
.emotion-6 >:last-child button {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-6 > a:last-child,
.emotion-6 > button:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-8 .subnav > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-8 .filter {
  display: inline-block;
}

.emotion-8 .filter:after {
  content: ' ';
  display: table;
  clear: both;
}

.emotion-8 .filter button {
  padding: 6px 10px;
  border-radius: 3px 0 0 3px;
}

.emotion-8 .filter form {
  margin-left: -1px;
  position: relative;
  display: inline-block;
}

.emotion-8 .filter form i {
  position: absolute;
  top: 10px;
  left: 6px;
}

.emotion-8 .filter input {
  width: 320px;
  padding: 6px 10px 6px 32px;
  color: #767676;
  border: 1px solid #d5d5d5;
  border-radius: 0 3px 3px 0;
  line-height: 20px;
}

.emotion-8 .issuesHeader {
  position: relative;
  padding: 12px 12px;
  margin-top: 20px;
  background-color: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 3px 3px 0 0;
}

.emotion-8 .issuesHeader > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-8 .issues {
  list-style: none;
  padding: 0;
  margin: 0;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.emotion-8 .issue {
  padding: 12px 12px;
  border-top: 1px solid #eee;
}

.emotion-8 .issue:first-child {
  border-top: none;
}

.emotion-8 .issue:after {
  content: ' ';
  display: table;
  clear: both;
}

.emotion-8 .issue .icon {
  float: left;
  color: #6cc644;
}

.emotion-8 .issue .main {
  float: left;
  margin-left: 12px;
}

.emotion-8 .issue .main .title {
  color: #333;
  font-size: 16px;
}

.emotion-8 .issue .main .sub {
  font-size: 12px;
}

.emotion-8 .issue .comments {
  float: right;
}

.emotion-2 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 6px 12px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="subnav"
  >
    <div
      className="filter"
    >
      <button
        className="emotion-0 emotion-1"
      >
        Filters
      </button>
      <form>
        <i
          className="fa fa-search"
        />
        <input />
      </form>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <a
        as={[Function]}
        className="emotion-2 emotion-1"
        href="/$OWNER/$REPO/labels"
        onClick={[Function]}
        transparent="true"
      >
        Labels
      </a>
      <a
        as={[Function]}
        className="emotion-2 emotion-1"
        href="/$OWNER/$REPO/milestones"
        onClick={[Function]}
        transparent="true"
      >
        Milestones
      </a>
    </div>
  </div>
  <div
    className="issuesHeader"
  >
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:open is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-exclamation-circle"
        />
         
        2
         Open
      </a>
    </div>
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:closed is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-check"
        />
         
        -1
         Closed
      </a>
    </div>
  </div>
  <ul
    className="issues"
  >
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            $TITLE_1
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            1
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_1"
          />
           by
           
          <a
            href="/$CREATED_BY_1"
            onClick={[Function]}
          >
            $CREATED_BY_1
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            1
          </a>
        </div>
      </div>
    </li>
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            $TITLE_2
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            2
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_2"
          />
           by
           
          <a
            href="/$CREATED_BY_2"
            onClick={[Function]}
          >
            $CREATED_BY_2
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            2
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Repository/Milestones with default 1`] = `
<div>
  <h2>
    milestones
  </h2>
</div>
`;

exports[`Storyshots Repository/Projects with default 1`] = `
<div>
  <h2>
    projects
  </h2>
</div>
`;

exports[`Storyshots Repository/Pulse with default 1`] = `
<div>
  <h2>
    pulse
  </h2>
</div>
`;

exports[`Storyshots Repository/Settings with default 1`] = `
<div>
  <h2>
    settings
  </h2>
</div>
`;

exports[`Storyshots Repository/Tree with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-3 {
  padding: 0;
  background-color: #fff;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-5 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.emotion-5 table tr td.commitMessage {
  padding-left: 12px;
}

.emotion-5 table tr td.commitMessage a {
  color: #888;
}

.emotion-5 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.emotion-5 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginBottom": "12px",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "12px",
        }
      }
    >
      <span
        toggler={
          <Button
            small={true}
          >
            <i>
              Branch: 
            </i>
            <span>
              #TREE
               
            </span>
            <i
              className="fa fa-caret-down"
            />
          </Button>
        }
        width={300}
      >
        <button
          className="emotion-0 emotion-1"
          onClick={[Function]}
        >
          <i>
            Branch: 
          </i>
          <span>
            #TREE
             
          </span>
          <i
            className="fa fa-caret-down"
          />
        </button>
      </span>
    </div>
    <div>
      <strong>
        <a
          href="/#OWNER/#REPO/tree/#TREE"
          onClick={[Function]}
        >
          #REPO
        </a>
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
      <strong>
        #PATH
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
    </div>
  </div>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-2"
      >
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "space-between",
            }
          }
        >
          <div>
            <img
              alt="#NAME_1"
              style={
                Object {
                  "background": "#ccc",
                  "height": 20,
                  "verticalAlign": "middle",
                  "width": 20,
                }
              }
            />
             
            <a
              href="/#NAME_1"
            >
              #NAME_1
            </a>
             
            <a
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #MESSAGE_1
            </a>
          </div>
          <div>
            Latest commit 
            <a
              className="sha"
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #SHA_1
            </a>
             
            <time-ago
              datetime="#DATE_1"
            />
          </div>
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <table>
          <tbody>
            <tr>
              <td
                className="icon"
              >
                <i
                  className="fa fa-file-text-o"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_1"
                  onClick={[Function]}
                >
                  #PATH_1
                </a>
              </td>
              <td
                className="commitMessage"
              >
                <a
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="updateAt"
              >
                <time-ago
                  datetime="#DATE_1"
                />
              </td>
            </tr>
            <tr>
              <td
                className="icon"
              >
                <i
                  className="fa fa-file-text-o"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                  onClick={[Function]}
                >
                  #PATH_2
                </a>
              </td>
              <td
                className="commitMessage"
              >
                <a
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="updateAt"
              >
                <time-ago
                  datetime="#DATE_1"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with 3rd level path 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a"
    onClick={[Function]}
  >
    a
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a/b"
    onClick={[Function]}
  >
    b
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    c
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with default 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    PATH
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Wiki with default 1`] = `
<div>
  <h2>
    wiki
  </h2>
</div>
`;

exports[`Storyshots Repository/shared/Entries with default 1`] = `
.emotion-2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-1 {
  padding: 0;
  background-color: #fff;
}

.emotion-1 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-1 > table > tbody > tr:first-child td {
  border: none;
}

.emotion-1 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-0 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-3 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.emotion-3 table tr td.commitMessage {
  padding-left: 12px;
}

.emotion-3 table tr td.commitMessage a {
  color: #888;
}

.emotion-3 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.emotion-3 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

<div
  className="emotion-3 emotion-4"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="#NAME_1"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          <a
            href="/#NAME_1"
          >
            #NAME_1
          </a>
           
          <a
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #MESSAGE_1
          </a>
        </div>
        <div>
          Latest commit 
          <a
            className="sha"
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #SHA_1
          </a>
           
          <time-ago
            datetime="#DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <table>
        <tbody>
          <tr>
            <td
              className="icon"
            >
              <i
                className="fa fa-file-text-o"
              />
            </td>
            <td
              className="name"
            >
              <a
                href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                onClick={[Function]}
              >
                #PATH_2
              </a>
            </td>
            <td
              className="commitMessage"
            >
              <a
                href="/#OWNER/#REPO/commit/#SHA_1"
                onClick={[Function]}
              >
                #MESSAGE_1
              </a>
            </td>
            <td
              className="updateAt"
            >
              <time-ago
                datetime="#DATE_1"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/shared/TreeSelector with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  toggler={
    <Button
      small={true}
    >
      <i>
        Branch: 
      </i>
      <span>
        $TREE
         
      </span>
      <i
        className="fa fa-caret-down"
      />
    </Button>
  }
  width={300}
>
  <button
    className="emotion-0 emotion-1"
    onClick={[Function]}
  >
    <i>
      Branch: 
    </i>
    <span>
      $TREE
       
    </span>
    <i
      className="fa fa-caret-down"
    />
  </button>
</span>
`;

exports[`Storyshots Repository1 part of Navigations 1`] = `
.emotion-1 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-0 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-0 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-0 .fa {
  margin-right: 0.5em;
}

<div
  className="emotion-1 emotion-2"
>
  <nav>
    <ul
      className="emotion-0"
    >
      <li>
        <a
          className=""
          href="/$OWNER/$REPO"
          onClick={[Function]}
        >
          <i
            className="fa fa-code"
          />
          Code
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/issues"
          onClick={[Function]}
        >
          <i
            className="fa fa-exclamation-circle"
          />
          Issues 1
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulls"
          onClick={[Function]}
        >
          <i
            className="fa fa-code-fork"
          />
          Pull requests 2
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/projects"
          onClick={[Function]}
        >
          <i
            className="fa fa-group"
          />
          Projects 3
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/wiki"
          onClick={[Function]}
        >
          <i
            className="fa fa-book"
          />
          Wiki
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulse"
          onClick={[Function]}
        >
          <i
            className="fa fa-line-chart"
          />
          Pulse
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/graphs"
          onClick={[Function]}
        >
          <i
            className="fa fa-bar-chart"
          />
          Graphs
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Repository1 with default 1`] = `
.emotion-23 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 a,
.emotion-7 button {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-7 >:first-child a,
.emotion-7 >:first-child button {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 > a:first-child,
.emotion-7 > button:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 >:last-child a,
.emotion-7 >:last-child button {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-7 > a:last-child,
.emotion-7 > button:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-28 {
  margin-bottom: 24px;
  background-color: #fafafa;
  border-bottom: 1px solid #eee;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-1 {
  display: inline-block;
  color: #666;
  font-size: 18px;
}

.emotion-0 {
  margin: 0 4px;
}

.emotion-21 {
  list-style: none;
  padding: 0;
}

.emotion-21 > li {
  display: inline-block;
  margin-left: 12px;
}

.emotion-21 > li i:first-child {
  margin-right: 4px;
}

.emotion-2 {
  margin-left: 4px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-25 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-25 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-25 .fa {
  margin-right: 0.5em;
}

<div>
  <div
    className="emotion-28"
  >
    <div
      className="emotion-23 emotion-24"
    >
      <div
        className="emotion-22"
      >
        <h1
          className="emotion-1"
        >
          <a
            href="/$OWNER"
          >
            $OWNER
          </a>
          <span
            className="emotion-0"
          >
            /
          </span>
          <a
            href="/$OWNER/$REPO"
          >
            $REPO
          </a>
        </h1>
        <nav>
          <ul
            className="emotion-21"
          >
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <span
                  toggler={
                    <Button
                      small={true}
                    >
                      <i
                        className="fa fa-eye"
                      />
                      Watch
                      <ForwardRef(render)
                        __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Header"
                        __EMOTION_TYPE_PLEASE_DO_NOT_USE__="i"
                        className="fa fa-caret-down"
                        css={
                          Object {
                            "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIlJlcG9zaXRvcnkuanMiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBa0g4QiIsImZpbGUiOiJSZXBvc2l0b3J5LmpzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gQGZsb3dcblxuLyoqIEBqc3gganN4ICovXG5pbXBvcnQgeyBqc3gsIGNzcyB9IGZyb20gJ0BlbW90aW9uL2NvcmUnXG5pbXBvcnQgKiBhcyBSZWFjdCBmcm9tICdyZWFjdCdcblxuaW1wb3J0IHsgTGluaywgUm91dGUsIHdpdGhSb3V0ZXIsIHR5cGUgTWF0Y2ggfSBmcm9tICdyZWFjdC1yb3V0ZXItZG9tJ1xuXG5pbXBvcnQgQnV0dG9uIGZyb20gJy4vY29tbW9uL2F0b21zL0J1dHRvbidcbmltcG9ydCBQYW5lbCBmcm9tICcuL2NvbW1vbi9ibG9ja3MvUGFuZWwnXG5pbXBvcnQgRHJvcGRvd24gZnJvbSAnLi9jb21tb24vYmxvY2tzL0Ryb3Bkb3duJ1xuaW1wb3J0IElubmVyQ29udGFpbmVyIGZyb20gJy4vY29tbW9uL2xheW91dHMvSW5uZXJDb250YWluZXInXG5pbXBvcnQgU2VnbWVudGVkQnV0dG9uc0NvbnRhaW5lciBmcm9tICcuL2NvbW1vbi9sYXlvdXRzL1NlZ21lbnRlZEJ1dHRvbnNDb250YWluZXInXG5cbnR5cGUgUHJvcHMgPSB7XG4gIGNoaWxkcmVuOiBSZWFjdC5Ob2RlLFxuICBtYXRjaDogJFNoYXBlPE1hdGNoPHsgb3duZXI6IHN0cmluZywgcmVwbzogc3RyaW5nIH0+PixcbiAgc2Vzc2lvbj86IGFueVxufVxuZXhwb3J0IGNvbnN0IFJlcG9zaXRvcnkgPSAoeyBjaGlsZHJlbiwgbWF0Y2gsIHNlc3Npb24gfTogUHJvcHMpID0+IChcbiAgPGRpdj5cbiAgICA8ZGl2XG4gICAgICBjc3M9e2Nzc2BcbiAgICAgICAgbWFyZ2luLWJvdHRvbTogMjRweDtcbiAgICAgICAgYmFja2dyb3VuZC1jb2xvcjogI2ZhZmFmYTtcbiAgICAgICAgYm9yZGVyLWJvdHRvbTogMXB4IHNvbGlkICNlZWU7XG4gICAgICBgfVxuICAgID5cbiAgICAgIDxIZWFkZXJcbiAgICAgICAgZm9ya2VkQ291bnQ9ey0xfVxuICAgICAgICBtYXRjaD17bWF0Y2h9XG4gICAgICAgIHN0YXJlZENvdW50PXstMX1cbiAgICAgICAgd2F0Y2hlZENvdW50PXstMX1cbiAgICAgIC8+XG4gICAgICA8TmF2aWdhdGlvbnNcbiAgICAgICAgaXNzdWVzQ291bnQ9ey0xfVxuICAgICAgICBtYXRjaD17bWF0Y2h9XG4gICAgICAgIHB1bGxSZXF1ZXN0c0NvdW50PXstMX1cbiAgICAgICAgcHJvamVjdHNDb3VudD17LTF9XG4gICAgICAgIHNlc3Npb249e3Nlc3Npb259XG4gICAgICAvPlxuICAgIDwvZGl2PlxuICAgIDxJbm5lckNvbnRhaW5lcj57Y2hpbGRyZW59PC9Jbm5lckNvbnRhaW5lcj5cbiAgPC9kaXY+XG4pXG5cbmV4cG9ydCBkZWZhdWx0IHdpdGhSb3V0ZXIoUmVwb3NpdG9yeSlcblxuY29uc3QgSGVhZGVyID0gKHtcbiAgZm9ya2VkQ291bnQsXG4gIG1hdGNoOiB7XG4gICAgcGFyYW1zOiB7IG93bmVyLCByZXBvIH1cbiAgfSxcbiAgc3RhcmVkQ291bnQsXG4gIHdhdGNoZWRDb3VudFxufToge1xuICBmb3JrZWRDb3VudDogbnVtYmVyLFxuICBtYXRjaDoge1xuICAgIHBhcmFtczoge1xuICAgICAgb3duZXI6IHN0cmluZyxcbiAgICAgIHJlcG86IHN0cmluZ1xuICAgIH1cbiAgfSxcbiAgc3RhcmVkQ291bnQ6IG51bWJlcixcbiAgd2F0Y2hlZENvdW50OiBudW1iZXJcbn0pID0+IChcbiAgPElubmVyQ29udGFpbmVyPlxuICAgIDxkaXZcbiAgICAgIGNzcz17Y3NzYFxuICAgICAgICBkaXNwbGF5OiBmbGV4O1xuICAgICAgICBqdXN0aWZ5LWNvbnRlbnQ6IHNwYWNlLWJldHdlZW47XG4gICAgICBgfVxuICAgID5cbiAgICAgIDxoMVxuICAgICAgICBjc3M9e2Nzc2BcbiAgICAgICAgICBkaXNwbGF5OiBpbmxpbmUtYmxvY2s7XG4gICAgICAgICAgY29sb3I6ICM2NjY7XG4gICAgICAgICAgZm9udC1zaXplOiAxOHB4O1xuICAgICAgICBgfVxuICAgICAgPlxuICAgICAgICA8YSBocmVmPXtgLyR7b3duZXJ9YH0+e293bmVyfTwvYT5cbiAgICAgICAgPHNwYW5cbiAgICAgICAgICBjc3M9e2Nzc2BcbiAgICAgICAgICAgIG1hcmdpbjogMCA0cHg7XG4gICAgICAgICAgYH1cbiAgICAgICAgPlxuICAgICAgICAgIC9cbiAgICAgICAgPC9zcGFuPlxuICAgICAgICA8YSBocmVmPXtgLyR7b3duZXJ9LyR7cmVwb31gfT57cmVwb308L2E+XG4gICAgICA8L2gxPlxuICAgICAgPG5hdj5cbiAgICAgICAgPHVsXG4gICAgICAgICAgY3NzPXtjc3NgXG4gICAgICAgICAgICBsaXN0LXN0eWxlOiBub25lO1xuICAgICAgICAgICAgcGFkZGluZzogMDtcbiAgICAgICAgICAgID4gbGkge1xuICAgICAgICAgICAgICBkaXNwbGF5OiBpbmxpbmUtYmxvY2s7XG4gICAgICAgICAgICAgIG1hcmdpbi1sZWZ0OiAxMnB4O1xuXG4gICAgICAgICAgICAgIGk6Zmlyc3QtY2hpbGQge1xuICAgICAgICAgICAgICAgIG1hcmdpbi1yaWdodDogNHB4O1xuICAgICAgICAgICAgICB9XG4gICAgICAgICAgICB9XG4gICAgICAgICAgYH1cbiAgICAgICAgPlxuICAgICAgICAgIDxsaT5cbiAgICAgICAgICAgIDxTZWdtZW50ZWRCdXR0b25zQ29udGFpbmVyPlxuICAgICAgICAgICAgICA8RHJvcGRvd25cbiAgICAgICAgICAgICAgICB0b2dnbGVyPXtcbiAgICAgICAgICAgICAgICAgIDxCdXR0b24gc21hbGw+XG4gICAgICAgICAgICAgICAgICAgIDxpIGNsYXNzTmFtZT1cImZhIGZhLWV5ZVwiIC8+XG4gICAgICAgICAgICAgICAgICAgIFdhdGNoXG4gICAgICAgICAgICAgICAgICAgIDxpXG4gICAgICAgICAgICAgICAgICAgICAgY2xhc3NOYW1lPVwiZmEgZmEtY2FyZXQtZG93blwiXG4gICAgICAgICAgICAgICAgICAgICAgY3NzPXtjc3NgXG4gICAgICAgICAgICAgICAgICAgICAgICBtYXJnaW4tbGVmdDogNHB4O1xuICAgICAgICAgICAgICAgICAgICAgIGB9XG4gICAgICAgICAgICAgICAgICAgIC8+XG4gICAgICAgICAgICAgICAgICA8L0J1dHRvbj5cbiAgICAgICAgICAgICAgICB9XG4gICAgICAgICAgICAgICAgd2lkdGg9ezMwMH1cbiAgICAgICAgICAgICAgPlxuICAgICAgICAgICAgICAgIDxTdWJzY3JpcHRpb25NZW51IC8+XG4gICAgICAgICAgICAgIDwvRHJvcGRvd24+XG4gICAgICAgICAgICAgIDxCdXR0b24gYXM9XCJhXCIgaHJlZj1cIiNcIiBzbWFsbCB0cmFuc3BhcmVudD5cbiAgICAgICAgICAgICAgICB7d2F0Y2hlZENvdW50fVxuICAgICAgICAgICAgICA8L0J1dHRvbj5cbiAgICAgICAgICAgIDwvU2VnbWVudGVkQnV0dG9uc0NvbnRhaW5lcj5cbiAgICAgICAgICA8L2xpPlxuICAgICAgICAgIDxsaT5cbiAgICAgICAgICAgIDxTZWdtZW50ZWRCdXR0b25zQ29udGFpbmVyPlxuICAgICAgICAgICAgICA8QnV0dG9uIHNtYWxsPlxuICAgICAgICAgICAgICAgIDxpIGNsYXNzTmFtZT1cImZhIGZhLXN0YXJcIiAvPlxuICAgICAgICAgICAgICAgIFN0YXJcbiAgICAgICAgICAgICAgPC9CdXR0b24+XG4gICAgICAgICAgICAgIDxCdXR0b24gYXM9XCJhXCIgaHJlZj1cIiNcIiBzbWFsbCB0cmFuc3BhcmVudD5cbiAgICAgICAgICAgICAgICB7c3RhcmVkQ291bnR9XG4gICAgICAgICAgICAgIDwvQnV0dG9uPlxuICAgICAgICAgICAgPC9TZWdtZW50ZWRCdXR0b25zQ29udGFpbmVyPlxuICAgICAgICAgIDwvbGk+XG4gICAgICAgICAgPGxpPlxuICAgICAgICAgICAgPFNlZ21lbnRlZEJ1dHRvbnNDb250YWluZXI+XG4gICAgICAgICAgICAgIDxCdXR0b24gc21hbGw+XG4gICAgICAgICAgICAgICAgPGkgY2xhc3NOYW1lPVwiZmEgZmEtY29kZS1mb3JrXCIgLz5cbiAgICAgICAgICAgICAgICBGb3JrXG4gICAgICAgICAgICAgIDwvQnV0dG9uPlxuICAgICAgICAgICAgICA8QnV0dG9uIGFzPVwiYVwiIGhyZWY9XCIjXCIgc21hbGwgdHJhbnNwYXJlbnQ+XG4gICAgICAgICAgICAgICAge2ZvcmtlZENvdW50fVxuICAgICAgICAgICAgICA8L0J1dHRvbj5cbiAgICAgICAgICAgIDwvU2VnbWVudGVkQnV0dG9uc0NvbnRhaW5lcj5cbiAgICAgICAgICA8L2xpPlxuICAgICAgICA8L3VsPlxuICAgICAgPC9uYXY+XG4gICAgPC9kaXY+XG4gIDwvSW5uZXJDb250YWluZXI+XG4pXG5cbmNvbnN0IFN1YnNjcmlwdGlvbk1lbnUgPSAoKSA9PiAoXG4gIDxkaXY+XG4gICAgPFBhbmVsLkhlYWRlcj5Ob3RpZmljYXRpb25zPC9QYW5lbC5IZWFkZXI+XG4gICAgPFBhbmVsLkJvZHkgbm9QYWRkaW5nPlxuICAgICAgPHVsXG4gICAgICAgIGNzcz17Y3NzYFxuICAgICAgICAgIGxpc3Qtc3R5bGU6IG5vbmU7XG4gICAgICAgICAgcGFkZGluZzogMDtcbiAgICAgICAgICA+IGxpIHtcbiAgICAgICAgICAgIHBhZGRpbmc6IDhweDtcbiAgICAgICAgICAgIDpub3QoOmxhc3QtY2hpbGQpIHtcbiAgICAgICAgICAgICAgYm9yZGVyLWJvdHRvbTogMXB4IHNvbGlkICNlZWU7XG4gICAgICAgICAgICB9XG4gICAgICAgICAgICA+IGEge1xuICAgICAgICAgICAgICBjb2xvcjogaW5oZXJpdDtcbiAgICAgICAgICAgICAgPiBoMiB7XG4gICAgICAgICAgICAgICAgbWFyZ2luOiAwO1xuICAgICAgICAgICAgICAgIGZvbnQtc2l6ZTogMTRweDtcbiAgICAgICAgICAgICAgfVxuICAgICAgICAgICAgICA+IHNwYW4ge1xuICAgICAgICAgICAgICAgIGZvbnQtc2l6ZTogMTJweDtcbiAgICAgICAgICAgICAgfVxuICAgICAgICAgICAgfVxuICAgICAgICAgIH1cbiAgICAgICAgYH1cbiAgICAgID5cbiAgICAgICAgPGxpPlxuICAgICAgICAgIDxhIGhyZWY9XCIjVE9ET1wiPlxuICAgICAgICAgICAgPGgyPk5vdCB3YXRjaGluZzwvaDI+XG4gICAgICAgICAgICA8c3Bhbj5CZSBub3RpZmllZCB3aGVuIHBhcnRpY2lwYXRpbmcgb3IgQG1lbnRpb25lZC48L3NwYW4+XG4gICAgICAgICAgPC9hPlxuICAgICAgICA8L2xpPlxuICAgICAgICA8bGk+XG4gICAgICAgICAgPGEgaHJlZj1cIiNUT0RPXCI+XG4gICAgICAgICAgICA8aDI+V2F0Y2hpbmc8L2gyPlxuICAgICAgICAgICAgPHNwYW4+QmUgbm90aWZpZWQgb2YgYWxsIGNvbnZlcnNhdGlvbnMuPC9zcGFuPlxuICAgICAgICAgIDwvYT5cbiAgICAgICAgPC9saT5cbiAgICAgICAgPGxpPlxuICAgICAgICAgIDxhIGhyZWY9XCIjVE9ET1wiPlxuICAgICAgICAgICAgPGgyPklnbm9yaW5nPC9oMj5cbiAgICAgICAgICAgIDxzcGFuPk5ldmVyIGJlIG5vdGlmaWVkLjwvc3Bhbj5cbiAgICAgICAgICA8L2E+XG4gICAgICAgIDwvbGk+XG4gICAgICA8L3VsPlxuICAgIDwvUGFuZWwuQm9keT5cbiAgPC9kaXY+XG4pXG5cbmV4cG9ydCBjb25zdCBOYXZpZ2F0aW9ucyA9ICh7XG4gIGlzc3Vlc0NvdW50LFxuICBtYXRjaCxcbiAgcHVsbFJlcXVlc3RzQ291bnQsXG4gIHByb2plY3RzQ291bnQsXG4gIHNlc3Npb25cbn06IHtcbiAgaXNzdWVzQ291bnQ6IG51bWJlcixcbiAgbWF0Y2g6ICRTaGFwZTxNYXRjaDx7IG93bmVyOiBzdHJpbmcsIHJlcG86IHN0cmluZyB9Pj4sXG4gIHByb2plY3RzQ291bnQ6IG51bWJlcixcbiAgcHVsbFJlcXVlc3RzQ291bnQ6IG51bWJlcixcbiAgc2Vzc2lvbj86ICpcbn0pID0+IHtcbiAgY29uc3QgeyBvd25lciwgcmVwbyB9ID0gbWF0Y2gucGFyYW1zXG4gIHJldHVybiAoXG4gICAgPElubmVyQ29udGFpbmVyPlxuICAgICAgPG5hdj5cbiAgICAgICAgPHVsXG4gICAgICAgICAgY3NzPXtjc3NgXG4gICAgICAgICAgICBkaXNwbGF5OiBmbGV4O1xuICAgICAgICAgICAgbGlzdC1zdHlsZTogbm9uZTtcbiAgICAgICAgICAgIHBhZGRpbmc6IDA7XG4gICAgICAgICAgICBtYXJnaW46IDA7XG4gICAgICAgICAgICB3aWR0aDogMTAwJTtcblxuICAgICAgICAgICAgYSB7XG4gICAgICAgICAgICAgIGRpc3BsYXk6IGJsb2NrO1xuICAgICAgICAgICAgICBwYWRkaW5nOiA3cHggMTVweCA4cHg7XG4gICAgICAgICAgICAgIG1hcmdpbi1ib3R0b206IC0xcHg7XG4gICAgICAgICAgICAgIGNvbG9yOiAjNjY2O1xuICAgICAgICAgICAgfVxuICAgICAgICAgICAgLnNlbGVjdGVkIHtcbiAgICAgICAgICAgICAgYmFja2dyb3VuZC1jb2xvcjogI2ZmZjtcbiAgICAgICAgICAgICAgYm9yZGVyLWxlZnQ6IDFweCBzb2xpZCAjZTVlNWU1O1xuICAgICAgICAgICAgICBib3JkZXItdG9wOiAzcHggc29saWQgI2QyNjkxMTtcbiAgICAgICAgICAgICAgYm9yZGVyLXJpZ2h0OiAxcHggc29saWQgI2U1ZTVlNTtcbiAgICAgICAgICAgIH1cbiAgICAgICAgICAgIC5mYSB7XG4gICAgICAgICAgICAgIG1hcmdpbi1yaWdodDogMC41ZW07XG4gICAgICAgICAgICB9XG4gICAgICAgICAgYH1cbiAgICAgICAgPlxuICAgICAgICAgIHtbXG4gICAgICAgICAgICBbJ2ZhLWNvZGUnLCAnQ29kZScsIGAvJHtvd25lcn0vJHtyZXBvfWBdLFxuICAgICAgICAgICAgW1xuICAgICAgICAgICAgICAnZmEtZXhjbGFtYXRpb24tY2lyY2xlJyxcbiAgICAgICAgICAgICAgYElzc3VlcyAke2lzc3Vlc0NvdW50fWAsXG4gICAgICAgICAgICAgIGAvJHtvd25lcn0vJHtyZXBvfS9pc3N1ZXNgXG4gICAgICAgICAgICBdLFxuICAgICAgICAgICAgW1xuICAgICAgICAgICAgICAnZmEtY29kZS1mb3JrJyxcbiAgICAgICAgICAgICAgYFB1bGwgcmVxdWVzdHMgJHtwdWxsUmVxdWVzdHNDb3VudH1gLFxuICAgICAgICAgICAgICBgLyR7b3duZXJ9LyR7cmVwb30vcHVsbHNgXG4gICAgICAgICAgICBdLFxuICAgICAgICAgICAgW1xuICAgICAgICAgICAgICAnZmEtZ3JvdXAnLFxuICAgICAgICAgICAgICBgUHJvamVjdHMgJHtwcm9qZWN0c0NvdW50fWAsXG4gICAgICAgICAgICAgIGAvJHtvd25lcn0vJHtyZXBvfS9wcm9qZWN0c2BcbiAgICAgICAgICAgIF0sXG4gICAgICAgICAgICBbJ2ZhLWJvb2snLCAnV2lraScsIGAvJHtvd25lcn0vJHtyZXBvfS93aWtpYF0sXG4gICAgICAgICAgICBbJ2ZhLWxpbmUtY2hhcnQnLCAnUHVsc2UnLCBgLyR7b3duZXJ9LyR7cmVwb30vcHVsc2VgXSxcbiAgICAgICAgICAgIFsnZmEtYmFyLWNoYXJ0JywgJ0dyYXBocycsIGAvJHtvd25lcn0vJHtyZXBvfS9ncmFwaHNgXSxcbiAgICAgICAgICAgIHNlc3Npb24gIT0gbnVsbFxuICAgICAgICAgICAgICA/IFsnZmEtZ2VhcicsICdTZXR0aW5ncycsIGAvJHtvd25lcn0vJHtyZXBvfS9zZXR0aW5nc2BdXG4gICAgICAgICAgICAgIDogbnVsbFxuICAgICAgICAgIF0ubWFwKFxuICAgICAgICAgICAgciA9PlxuICAgICAgICAgICAgICByICE9IG51bGwgJiYgKFxuICAgICAgICAgICAgICAgIDxsaSBrZXk9e3JbMF19PlxuICAgICAgICAgICAgICAgICAgPFJvdXRlXG4gICAgICAgICAgICAgICAgICAgIGV4YWN0XG4gICAgICAgICAgICAgICAgICAgIHBhdGg9e3JbMl19XG4gICAgICAgICAgICAgICAgICAgIC8vIGVzbGludC1kaXNhYmxlLW5leHQtbGluZVxuICAgICAgICAgICAgICAgICAgICBjaGlsZHJlbj17KHsgbWF0Y2ggfSkgPT4gKFxuICAgICAgICAgICAgICAgICAgICAgIDxMaW5rIGNsYXNzTmFtZT17bWF0Y2ggPyAnc2VsZWN0ZWQnIDogJyd9IHRvPXtyWzJdfT5cbiAgICAgICAgICAgICAgICAgICAgICAgIDxpIGNsYXNzTmFtZT17YGZhICR7clswXX1gfSAvPlxuICAgICAgICAgICAgICAgICAgICAgICAge3JbMV19XG4gICAgICAgICAgICAgICAgICAgICAgPC9MaW5rPlxuICAgICAgICAgICAgICAgICAgICApfVxuICAgICAgICAgICAgICAgICAgLz5cbiAgICAgICAgICAgICAgICA8L2xpPlxuICAgICAgICAgICAgICApXG4gICAgICAgICAgKX1cbiAgICAgICAgPC91bD5cbiAgICAgIDwvbmF2PlxuICAgIDwvSW5uZXJDb250YWluZXI+XG4gIClcbn1cbiJdfQ== */",
                            "name": "t0vavf-Header",
                            "styles": "margin-left:4px;label:Header;",
                          }
                        }
                      />
                    </Button>
                  }
                  width={300}
                >
                  <button
                    className="emotion-3 emotion-4"
                    onClick={[Function]}
                  >
                    <i
                      className="fa fa-eye"
                    />
                    Watch
                    <i
                      className="fa fa-caret-down emotion-2"
                    />
                  </button>
                </span>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-star"
                  />
                  Star
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-code-fork"
                  />
                  Fork
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="emotion-23 emotion-24"
    >
      <nav>
        <ul
          className="emotion-25"
        >
          <li>
            <a
              className=""
              href="/$OWNER/$REPO"
              onClick={[Function]}
            >
              <i
                className="fa fa-code"
              />
              Code
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/issues"
              onClick={[Function]}
            >
              <i
                className="fa fa-exclamation-circle"
              />
              Issues -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulls"
              onClick={[Function]}
            >
              <i
                className="fa fa-code-fork"
              />
              Pull requests -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/projects"
              onClick={[Function]}
            >
              <i
                className="fa fa-group"
              />
              Projects -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/wiki"
              onClick={[Function]}
            >
              <i
                className="fa fa-book"
              />
              Wiki
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulse"
              onClick={[Function]}
            >
              <i
                className="fa fa-line-chart"
              />
              Pulse
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/graphs"
              onClick={[Function]}
            >
              <i
                className="fa fa-bar-chart"
              />
              Graphs
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/settings"
              onClick={[Function]}
            >
              <i
                className="fa fa-gear"
              />
              Settings
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="emotion-23 emotion-24"
  >
    children
  </div>
</div>
`;
